# concept-grep

./: Cargo.toml
models/MiniLM-L6-v2/: config.json  convert.sh
src/: .main.rs.swp  main.rs
txt/: alice.txt  alice_full.txt
