[package]
name = "concept-grep"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argh = "0.1.17"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tls-native"] }
ort-tract = { version = "0.3.0", optional = true }
tokenizers = "0.22.2"

[features]
default = []
xnnpack = [ "ort/download-binaries", "ort/xnnpack" ]
coreml = [ "ort/download-binaries", "ort/coreml" ]
tract = [ "ort-tract", "ort/alternative-backend" ]

